svg to be installed.

--- a/movingPortfolio/style.css
+++ b/movingPortfolio/style.css
@@ -70,3 +70,12 @@ a {
     width: 100px;
     height: 33%;
 }
+
+.wave {
+    fill: rgb(0,0,0);
+    width: 100vw;
+    height: 65vh;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
