--- a/nokia3310Snake/style.css
+++ b/nokia3310Snake/style.css
@@ -1,9 +1,9 @@
 .grid {
-    width: 200px;
-    height: 200px;
+    width: 180px;
+    height: 180x;
     display: flex;
     flex-wrap: wrap;
-    border-style: solid;
+    border: 1px solid;
 }
 
 .grid div {
@@ -11,11 +11,14 @@
     height: 20px;
 }
 
-.snake {
+.ending-block {
+    background-color: red;
+}
+
+.starting-block {
     background-color: blue;
 }
 
-.apple {
-    background-color: purple;
+.frog {
+    background-color: green;
 }
-
