--- a/lightandDark/styles.css
+++ b/lightandDark/styles.css
@@ -1,3 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+body {
+    transition: 0.3s;
+    padding: 0;
+    margin: 0;
+    background-color: rgb(241,239,239);
+    font-family: 'Poppins', sans-serif;
+}
+
+h1 {
+    font-size: 70 px;
+    line-height: 70px;
+    font-weight: 300;
+    margin: 10px 0;
+}
+
+h2 {
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 300;
+    margin: 10px 0;
+}
+
+.square h2 {
+    margin: 50px 0 10px 0;
+}
+
+p {
+    margin: 0px;
+    font-size: 20px;
+}
+
+a {
+    color: rgb(162,0,255);
+    font-size: 20px;
+    font-weight: 100;
+    text-decoration: none;
+}
+
+.dark a {
+    color: rgb(246, 169,241);
+}
+
+header {
+    display: flex;
+    justify-content: flex-end;
+    padding: 30px;
+}
+
 .switch {
     width: 80px;
     height: 40px;
@@ -21,4 +71,67 @@
 
 .dark {
     background-color: rgb(57,57,57);
+    transition: 0.3s;
+}
+
+.dark > * {
+    color: white;
+}
+
+.moon {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 0 0 rgb(255,255,255);
+    top: 5px;
+    left: 45px;
+}  
+
+.dark .flicker {
+    transform: translateX(40px);
+    transition: 0.3s;
+}
+
+.main {
+    height: height  80vh;
+}
+
+.main-text {
+    width: 50%;
+    padding: 30%;
+}
+
+.square {
+    width: 100%;
+    height: 350px;
+    margin: 1%;
+    background-color: aquamarine;
+    text-align: center;
+}
+
+.dark .square {
+    background-color: rgb(71,71,71);
+}
+
+.sub-section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+    background-color: rgb(39,39,39);
+}
+
+.dark footer {
+    background-color: rgb(62,62,62);
+}
+@media only screen and (min-width: 970px) {
+    .square {
+        width: 48%;
+        margin: 1%;
+        height: 600px;
+    }
 }
