--- a/animationPortfolio/style.css
+++ b/animationPortfolio/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 body {
     margin: 0;
     padding: 0;
 }
 
 .sky {
+    overflow-x: hidden;
     position: relative;
     background-image: linear-gradient(#F3BADB, #F6D19C);
     width: 100%;
@@ -21,43 +24,49 @@ body {
 #cloud-one {
     width: 20%;
     bottom: 40%;
-    margin-left: 70%;
+    left: 75%;
 }
 
 #cloud-two {
     width: 25%;
     bottom: 80%;
-    margin-left: 60%;
+    left: 60%;
 }
 
 #cloud-three {
     width: 30%;
     bottom: 60%;
-    margin-left: 40%;
+    left: 0%;
 }
 
 #cloud-four {
     width: 24%;
     bottom: 70%;
-    margin-left: 40%;
+    left: 20%;
 }
 
 #cloud-five {
     width: 23%;
     bottom: 60%;
-    margin-left: 40%;
+    left: 60%;
 }
 
 #javascript {
     width: 5%;
     bottom: 30%;
-    margin-right: 55%;
+    left: 20%;
 }
 
 #react {
     width: 5%;
     bottom: 30%;
-    margin-right: 31%;
+    left: 26%;
+}
+
+#graphql {
+    width: 5%;
+    bottom: 30%;
+    left: 32%;
 }
 
 #air-balloon {
@@ -75,5 +84,8 @@ body {
 
 h1 {
     color: white;
+    font-family: 'Lobster', cursive;
+    font-size: 60px;
 }
+
 
